# OpenEnv

./: .gitignore  1_LEARNING_GUIDE.md  2_REQUIREMENTS.md  3_PROJECT_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  TESTING.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  serve.py
app/: environment.py  main.py  models.py  reward.py
app/data/: real_task1.json  real_task2.json  real_task3.json
app/tasks/: __init__.py  task1_detect.py  task2_clean.py  task3_cascade.py
memory/: MEMORY.md  project_climatewatch.md  user_profile.md
scripts/: check_live.py  fetch_real_data.py  kill_port.py
server/: app.py
tests/: test_endpoints.py  test_graders.py
